# action-semantics-tools

abf/: Makefile  config.cache  config.status  configure  configure.in
abf/autom4te.cache/: output.0  traces.0
abf/src/: Makefile  Makefile.am  Makefile.in  abf.c  abf.h  testobs.c
abf/src/OLD/: abfapi.c  abfapi.h
acc/: Makefile  c++2latex.tex  err  fac  fac.c  fac2  fac2-mod.c  fac2.c  fac2.s  fib-iter  fib-iter.c  fib-iter2  fib-iter2.c  fib-iter3  fib-iter3.c  fib-rec  fib-rec.c  fib-rec.dot  fib-rec.prof  fib-rec.ps  fib-rec2  fib-rec2.c  fib-rec2.dot  fib-rec2.prof  fib-rec2.ps  fib-rec3  fib-rec3.c  fib-rec3.dot  fib-rec3.prof  fib-rec3.ps  fib.c  fibo  fibo.c  gmon.out  reflection-old  reflection.c  reflection.h  runtime.c  test-alloca.c  test-jit.c  (+4 more)
acc/OLD/: a.out  abfstacks.h  acb.c  acb.h  accbak.h  accdata.dvi  accdata.h  accdata.ps  accdata.tex  accdata2.c  accdata2.h  accstacks.h  accstore.h  accutils.c  accutils.h  acdata.adt  acdata.h  acdata_dict.c  acdata_dict.h  acmacros.h  avmexceptions.h  avmstacks.h  bindings.c  bindings.h  data.h  excstack.h  jmpstack.c  jmpstack.h  labelstack.c  labelstack.h  sched.c  sched.h  test.c  testdata.c  testdec.c
acr/: Makefile  config.cache  config.status  configure  configure.scan
acr/autom4te.cache/: output.0  requests  traces.0
acr/src/: Makefile  Makefile.am  Makefile.in  acr  acr-actions.c  acr-actions.h  acr-agent.c  (+8 more)
ail/: INSTALL  Makefile  Makefile.in  config.status  configure  configure.scan
ajc/: FibIter.java  FibIterRec.java  FibIterTail.java  FibRec-nocomment.java  FibRec-nocomment.tex  FibRec.java  Makefile  Makefile.am  ajc.doxygen  data  err
asf+sdf/: README  TODO  meta.conf
asf+sdf/java/java-front-0.1.7/: ChangeLog  Makefile.am  Makefile.in  NEWS  NEWS.in  README  README.in  configure  configure.in  java-front.pkg  java-front.pkg.in  my-config
asf+sdf/java/java-front-0.1.7/grammar/: Makefile.am  Makefile.in
asf+sdf/java/java-front-0.1.7/grammar/basic/: Java-Expressions.sdf  Java-Statements.sdf  Makefile.am  Makefile.in  Stratego-Java.sdf
asf+sdf/java/java-front-0.1.7/grammar/generic/: Generic-Java.sdf  Makefile.am  Makefile.in
asf+sdf/java/java-front-0.1.7/lib/: Makefile.am  Makefile.in
asf+sdf/java/java-front-0.1.7/lib/box/: Box-Atoms-Syntax.sdf  Box-Disambiguation.sdf  Box-Layout.sdf  Box-Lists-Syntax.sdf  Box-Operators-Syntax.sdf  Box-Syntax-Base.sdf  Box-Syntax.sdf  IntCon.sdf  Literal-Box-Syntax.sdf  Makefile.in  README
asf+sdf/java/java-front-0.1.7/pretty-print/: Makefile.am  Makefile.in  Stratego-box.sdf  pp-Generic-Java.cr  pp-Java-Expressions.cr  pp-Java-Literals.cr  pp-Java-Modifiers.cr  pp-Java-Modifiers.syn  pp-Java-Names.cr  pp-Java-Statements.cr  pp-Java.cr  pp-Java.syn
asf+sdf/java/java-front-0.1.7/scripts/: Makefile.am  Makefile.in  jtree2text.sh.src  parse-java.sh.src
asf+sdf/java/java-front-0.1.7/tests/: Makefile.am  Makefile.in  parse-unit.config.src  parse-unit.r  statements.testsuite
asf+sdf/java/java-front-0.1.7/tests/CompilationUnits/: Makefile.in
asf+sdf/java/java-front-0.1.7/tests/comments/: Makefile.in
asf+sdf/java/java-front-0.1.7/tests/generic/: Makefile.am  Makefile.in
asf+sdf/java/java-front-0.1.7/tests/generic/CompilationUnits/: Makefile.in
asf+sdf/java/java-front-0.1.7/tree/: Makefile.am  Makefile.in
asf+sdf/java/java-front-0.1.7/tree/concrete/: Makefile.am  Makefile.in
asf+sdf/java/java-front-0.1.7/tree/generic/: Makefile.am  Makefile.in
avm/: Makefile  config.status  configure  configure.in  configure.scan  install-sh
avm/autom4te.cache/: output.0  traces.0
avm/src/: Makefile  Makefile.am  Makefile.in  ail-to-c.c  ailc-run.c  an2-ail-dis  an2-ail-dis.c  an2-ail-impl-old.h  an2-ail-impl.h  an2-ail-to-c  an2-ail-to-c.c  an2-ail.c  an2-ail.h  avm  avm.c  avm2.c  diss  err  main.c
avm/src/support/: Makefile  Makefile.am  Makefile.in  acb.c  acb.h  address.h  context.c  context.h  exits.h  frames.c  frames.h  machine.c  machine.h  saved.c  saved.h  schedule.c  schedule.h  throwable.h
avm/src/support/_OLD/: ail-reflect.c  ail-reflect.h  ail-runtime.c  ail-runtime.h
avm/src/test/: barf  barf.c  fib-iter-ail  fib-iter-ail.c  fib-iter-tail.action  fib-iter.action.c  fib-rec-opt.action  fib-rec.diss
bail/: COPYING  Makefile  Makefile.in  README  config.cache  config.status  configure  configure.in  configure.scan  missing
bail/autom4te.cache/: output.0  traces.0
bail/src/: AIL.c  AIL.h  Makefile  Makefile.am  Makefile.in  ail2abf.c  ail2abf.h  ailc-main.c  bail  parse-ail
bail/src/api/: AIL.c  AIL.h  AIL_dict.h  ail.def.adt
bail/src/opt/: ailc-opt.c  ailc-opt.def  ailc-opt.h
bail/src/share/: action-def.baf  action-def.trm  ail-ins.baf  ail-ins.trm  rbaf
bail/src/test/: TEST.c  TEST.c.OLD  TEST.h.OLD  an2-ail-impl.h  an2-ail.c  an2-ail.c.OLD  an2-ail.h  fac2.baf  fib-iter-tail.ail  fib-iter-tail.ail.baf  fib-iter.action  fib-iter.ail  fib-iter.ail.baf  fib-rec-opt.ail  fib-rec-opt.ail.baf  fib-rec.action  fib-rec.ail  fib-rec.ail.baf  out  reduct.baf  rpn-def.baf  rpn-def.trm  rpn-impl.h  rpn-impl.h.OLD  rpn.c  rpn.c.OLD  rpn.h  rpn.h.OLD  test-impl.h.OLD  test.baf  test.c  test.c.OLD  test.h
bail/src/test/old_api/: ail.c  ail.def.adt  ail.h  ail.trm  ail_dict.c  ail_dict.h
bail/src/test/old_api2/: ail.c  ail.def  ail.def.adt  ail.dict  ail.h  ail_dict.c  ail_dict.h  copy.sh  err
bail/src/tmp/: barf  err  fac2-new.action  fac2-new.ail  fac2-new.trm  fac2.abf  fac2.action  fac2.ail  fac2.verb  reduct.abf  reduct.trm  sieve.ail  test.abf  test.action  test.ail  test.trm
dn2/: AUTHORS  Makefile  Makefile.am  config.h.in  config.status  configure  configure.in  configure.scan  depcomp  mkinstalldirs
dn2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
dn2/src/: Makefile  Makefile.am  Makefile.in  a.out  bbtree.c  bindings.c  dn2.h  set.c  store.c  taggedbuffers.c  test-int.c  test.c
dn2/src/dn/: action.h  agent.h  bbtree.h  bindings.h  bool.h  cell.h  data.h  datum.h  int.h  list.h  map.h  pair.h  set.h  stack.h  store.h  taggedbuffers.h  token.h
dn2/src/obs/: an2-tree.c  an2-tree.h  tuple.h
(+2102 files in other folders)
