dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/abf.c)
AM_INIT_AUTOMAKE(abf, 0.1)

AC_ARG_PROGRAM

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_CHECK_HEADERS(strings.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_HEADER_STDC

AC_OUTPUT([Makefile src/Makefile])
