# Process this file with autoconf to produce a configure script.
AC_INIT(src/an2-ail.h)

AM_INIT_AUTOMAKE(AN2AIL, 0.1)

# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC


AC_OUTPUT([Makefile src/Makefile src/support/Makefile])
