dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/ail2abf.c)
AM_INIT_AUTOMAKE(ail2abf, 0.1)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_ALLOCA

AC_OUTPUT([Makefile src/Makefile])
