# Process this file with autoconf to produce a configure script.

AC_INIT(src/dn2.h)

AM_INIT_AUTOMAKE(dn,0.1)

# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB


# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE

# Checks for library functions.


AC_OUTPUT([Makefile src/Makefile])
