

lib_LIBRARIES = libDN2.a

libDN2_a_SOURCES = bbtree.c bindings.c set.c store.c taggedbuffers.c

nobase_include_HEADERS = dn2.h \
dn/action.h \
dn/agent.h \
dn/bbtree.h \
dn/bindings.h \
dn/bool.h \
dn/cell.h \
dn/data.h \
dn/datum.h \
dn/int.h \
dn/list.h \
dn/map.h \
dn/pair.h \
dn/set.h \
dn/stack.h \
dn/store.h \
dn/taggedbuffers.h \
dn/token.h